--- a/Hiring/a_ludo_probandi/Nutritional_Biochemist/20200923_SFA_Nutrition_NSFA_posreq.tex
+++ b/Hiring/a_ludo_probandi/Nutritional_Biochemist/20200923_SFA_Nutrition_NSFA_posreq.tex
@@ -18,19 +18,23 @@
 \let\endchangemargin=\endlist 
 \begin{document}
 \sloppy \rmfamily
-\begin{center}\textbf{NSFA Faculty Position Request\\Date of Submission:~}Sept 30, 2020\end{center}
+\begin{center}\textbf{NSFA Faculty Position Request\\Date of Submission:~}Sept 25, 2020\end{center}
 
 \noindent\textbf{Unit:~}SFA\hfill\textbf{Title:~}Assistant Professor in Nutritional Biochemistry \hfill \textbf{Start Date:~}Sep 1, 2021\\~\\
 \textbf{How does this position address needs in academic programming (i.e., courses taught)?}\\~\\
 \small\sffamily 
-This position request is to replace a vacancy left by the departure of one of our faculty (Angela Myracle). The position teaches coursework to satisfy certification requirements of our Didactic Program in Dietetics by the Accreditation Council for Education in Nutrition and Dietetics (ACEND), qualifying our students to sit for the Certifying Examination to become a Registered Dietitian.\\~\\
-The primary teaching responsibilities of the position include: FSN 410 Human nutrition and metabolism, FSN 571 Technical presentation, plus a graduate class in Science Communications, and a graduate class to meet curricular needs in nutritional biochemistry. Currently we are utilizing adjunct instructors to cover this vacancy during AY 20-21. \\~\\
-\textbf{\rmfamily How does this position support the research mission of the unit?}\\~\\
-The position will conduct research in Nutritional Biochemistry/Nutrigenomics, focused on translational research to improve human health, especially in Maine's population. Applicants are expected to build a robust, externally-funded research program and create collaborations within the School, across campus, and with other institutions. This position has the potential to have a positive impact on the health of Maine's population, and on Maine's food producers through many ways, including identifying  nutritional benefits of Maine food products. The position carries an expectation for mentoring and advising of graduate students and for supervising undergraduate research. 
+This position request is to replace a vacancy left by the departure of one of our faculty (Angela Myracle). The position teaches coursework to satisfy certification requirements of our Didactic Program in Dietetics by the Accreditation Council for Education in Nutrition and Dietetics (ACEND), enabling our students to sit for the Certifying Examination to become a Registered Dietitian.\\~\\
+The primary teaching responsibilities of the position include: FSN 410 Human nutrition and metabolism, FSN 571 Technical presentation, plus a graduate class in Science Communications, and a graduate class in nutritional biochemistry to meet curricular needs, including the UMaine Gold Program. The teaching load will average 9 credits a year. Currently we are utilizing adjunct instructors to cover this vacancy during AY 20-21. \\~\\
+Graduate supervision is an important part of this position. Responsibilities will include
+research, teaching, student advising, and providing expertise to the state and UMaine community in the areas of human nutrition and nutritional biochemistry.\\~\\
+\vfill
+\noindent\textbf{\rmfamily How does this position support the research mission of the unit?}\\~\\
+The position will conduct research in Nutritional Biochemistry/Nutrigenomics, focused on translational research to improve human health, especially in Maine's population. Applicants are expected to build a robust, externally-funded research program and create collaborations within the School, across campus, and with other institutions such as Jackson Laboratory, Maine Medical Center Research Institute, UMaine Cooeprative extension, the medical community in Maine, local farmers and food producers. This position has the potential to have a positive impact on the health of Maine's population, and on Maine's food system through many ways, including identifying  nutritional benefits of Maine food products. The position carries an expectation for mentoring and advising of graduate students and for supervising undergraduate research. 
+\vfill
 \newpage
 \noindent\textbf{\rmfamily In what ways does this position support College, University, or System initiatives and/or priorities?}
 \\~\\
-This position directly supports 3 Initiatives of the College Road-map to Excellence: \#1 - Excellence in undergraduate advising.
+This position directly supports 4 Initiatives of the College Road-map to Excellence: \#1 - Excellence in undergraduate advising.
 \#2 - Growing our research enterprise in the service of science and Maine - by building a robust, externally-funded research program in nutritional biochemistry. \#3 - Enhancing quality and impact of our graduate education programs and \#4 -  Rising to meet Maine's health care needs - by preparing students to become registered dietitians in a program certified by the Accreditation Council for Education in Nutrition and Dietetics and by improving health of Maine's population through scientific discovery and innovation in the field of human nutrition, and encouraging innovation in food science.  \\~\\The position supports the University's strategic values and vision statements by supporting learners in experiential learning and innovation in food and nutrition (Goals 1.1 and 1.2), supports key infrastructure such as the Matthew Highlands Pilot Plant (Goal 2); and through using the hire to support diversity, equity and inclusion (Goal 3).
 \vfill
 \noindent\textbf{\rmfamily Can this position meet any partner accomodation needs (describe)?}
@@ -46,7 +50,7 @@ Graduate student support - one graduate assistant for three years \$60K\\
 Summer salary - \$25K\\~\\
 \vfill
 \noindent\textbf{\rmfamily Considering all available sources, how do you anticipate meeting the startup needs?}\\~\\
-Support from the School, College, and Vice President for Research\\~\\
+Support from the School, College, and Vice President for Research, and private donations towards laboratory renovation.\\~\\
 \vfill
 \noindent\textbf{\rmfamily What are the anticipated space needs?}\\~\\ Laboratory and office. An office and graduate student space is currently available\\~\\
 \vfill
